# HR-automation-chatbot

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  examples.py  langchain_utils.py  main.py  models.py  prompts.py
app/router/: leaves.py
