[project]
name = "hr-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.118.0",
    "langchain==0.3.7",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.7",
    "langchain-openai==0.2.8",
    "langsmith==0.1.142",
    "posthog>=2.4.0,<6.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "pymysql==1.1.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.35",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
